Update Libya pricing and offer

--- a/index.html
+++ b/index.html
@@ -784,10 +784,14 @@
                 <div class="flex flex-col md:flex-row justify-between items-center mb-12 bg-gradient-to-r from-red-900/30 to-orange-900/30 p-8 rounded-2xl border border-orange-600/30">
                     <div class="text-right mb-6 md:mb-0">
                         <p class="text-sm text-gray-400 uppercase tracking-widest font-bold mb-2">السعر النهائي في ليبيا</p>
-                        <p class="text-4xl md:text-5xl font-black text-white">350 <span class="text-xl volcano-text">دينار ليبي</span></p>
+                        <p class="text-4xl md:text-5xl font-black text-white">450 <span class="text-xl volcano-text">دينار ليبي</span></p>
                         <p class="text-gray-400 mt-3">
-                            بدلاً من <span class="line-through text-red-400">450 دينار</span> 
+                            بدلاً من <span class="line-through text-red-400">550 دينار</span> 
                             <span class="text-green-400 font-bold mx-2">▼ وفر 100 دينار!</span>
+                        </p>
+                        <p class="text-gray-300 mt-3 font-bold">
+                            العرض الأقوى: عبوتين بـ <span class="text-white">675 دينار</span>
+                            <span class="text-red-400 line-through mx-2">1100 دينار</span>
                         </p>
                     </div>
                     <div class="space-y-4">
@@ -984,7 +988,7 @@
             const whatsappNumber = "905539440395";
             
             // رسالة الطلب المحسنة
-            const message = `🔥 طلب BALEN FOR MEN جديد 🔥%0A%0A👤 الاسم: ${name}%0A📞 الهاتف: ${phone}%0A📍 العنوان: ${address}%0A💰 السعر: 350 دينار ليبي%0A%0A🕒 وقت الطلب: ${new Date().toLocaleString('ar-LY')}%0A%0A🚀 يرجى الاتصال بالمشتري خلال 5 دقائق!`;
+            const message = `🔥 طلب BALEN FOR MEN جديد 🔥%0A%0A👤 الاسم: ${name}%0A📞 الهاتف: ${phone}%0A📍 العنوان: ${address}%0A💰 السعر: 450 دينار ليبي%0A🎁 العرض الأقوى: عبوتين بـ 675 بدل 1100%0A%0A🕒 وقت الطلب: ${new Date().toLocaleString('ar-LY')}%0A%0A🚀 يرجى الاتصال بالمشتري خلال 5 دقائق!`;
             
             // فتح واتساب
             window.open(`https://wa.me/${whatsappNumber}?text=${message}`, '_blank');
